<resources>
    <string name="app_name">WeatherApp</string>
    <string name="copyright">©Hemendra Sethi 2015</string>
    <string name="text_temperature">Temperature</string>
    <string name="text_condition">Condition</string>
    <string name="text_location">Location</string>
    <string name="yahoo_logo">Yahoo Logo</string>
    <string name="l_day">Day</string>
    <string name="l_temp">Temperature</string>
    <string name="l_desc">Description</string>
    <string name="l_highTemp">High</string>
    <string name="l_lowTemp">Low</string>
    <string name="img">Weather</string>
</resources>
