<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/l_day"
        android:id="@+id/tv_day"
        android:gravity="center"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/l_temp"
        android:id="@+id/tv_temp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/l_desc"
        android:id="@+id/v_description"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:weightSum="1"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/l_highTemp"
            android:id="@+id/v_highTemp"
            android:layout_weight="1.01"
            android:gravity="left" />

        <TextView
            android:layout_width="173dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/l_lowTemp"
            android:id="@+id/v_lowTemp"
            android:layout_gravity="right"
            android:gravity="right" />
    </LinearLayout>


</LinearLayout>