<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_day"
                    android:text="@string/l_day"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_temp"
                    android:text="@string/l_temp"/>

            </LinearLayout>
            <ImageView
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:id="@+id/icon_image"
                android:src="@drawable/na"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l_highTemp"
                    android:id="@+id/v_highTemp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l_lowTemp"
                    android:id="@+id/v_lowTemp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_desc"
                android:id="@+id/v_description"
                android:paddingLeft="15dp"/>
        </LinearLayout>
    </HorizontalScrollView>
</FrameLayout>